--- a/order-service/.github/workflows/ci.yml
+++ b/order-service/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Build and Test order-service
+name: Build and Test Orderservice
 
 on:
   push:
@@ -18,6 +18,13 @@ jobs:
       with:
         java-version: '17'
         distribution: 'temurin'
+    
+    - name: Cache Maven dependencies
+      uses: actions/cache@v3
+      with:
+        path: ~/.m2
+        key: $${{ runner.os }}-m2-$${{ hashFiles('**/pom.xml') }}
+        restore-keys: $${{ runner.os }}-m2
     
     - name: Run tests
       run: mvn clean test
