--- a/order-service/Dockerfile
+++ b/order-service/Dockerfile
@@ -2,7 +2,7 @@ FROM eclipse-temurin:17-jdk AS builder
 WORKDIR /app
 COPY pom.xml .
 COPY src ./src
-RUN ./mvnw clean package -DskipTests
+RUN mvn clean package -DskipTests
 
 FROM eclipse-temurin:17-jre
 WORKDIR /app
